--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^17.0.0",
+    "animate.css": "^4.1.1",
     "firebase": "^8.6.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
